# OledWallpaperMagic

./: .gitignore  CHANGELOG.md  CLI.md  DESIGN.md  OledWallpaperMagic.spec  README.md  metadata.json  pyproject.toml  pyrightconfig.json  review_state.json  run_gui.bat  run_gui.sh  run_gui.vbs
.github/workflows/: ci.yml  release.yml
presets/: awesome_bubbles.toml  cool_violet.toml  dense.toml  minimal.toml  subtle.toml  ultrawide.toml  vivid.toml
scripts/: build_exe.bat  build_exe.sh
src/oled_wallpaper_magic/: __init__.py  __main__.py  cli.py  config.py  presets.py
src/oled_wallpaper_magic/generator/: circle.py  engine.py  fuzzy_circle.py  palette.py
src/oled_wallpaper_magic/session/: manager.py  metadata.py
src/oled_wallpaper_magic/uiqt/: __init__.py  app.py  preview.py  review.py
src/oledwall/: __main__.py  cli.py  config.py  presets.py
src/oledwall/generator/: circle.py  engine.py  fuzzy_circle.py  palette.py
src/oledwall/session/: manager.py  metadata.py
src/oledwall/uiqt/: __init__.py  app.py  preview.py  review.py
tests/: conftest.py  test_generator.py
tests/test_high_risk/: test_config.py  test_determinism.py  test_presets.py  test_session.py
tests/test_medium_risk/: test_cli.py  test_color_parsing.py
tests/test_system/: test_integration.py
