[project]
name = "oled-wallpaper-magic"
version = "1.0.0"
description = "OLED-friendly fuzzy circle wallpaper generator with CLI and desktop review"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OledWallpaperMagic contributors"}
]
keywords = ["wallpaper", "oled", "generator", "cli", "art", "blur", "gradient"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pyside6>=6.8.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "typer[testing]>=0.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
owm = "oled_wallpaper_magic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oled_wallpaper_magic"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/presets",
    "/sample",
    "/README.md",
    "/CLI.md",
    "/DESIGN.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "SIM", "B", "C4"]
ignore = [
    "B008",  # typer.Argument - false positive for typer CLI defaults
    "N802",  # Qt method overrides (resizeEvent, closeEvent) - Qt naming convention
    "E402",  # PySide6 dynamic imports - required for lazy loading
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true